crates/snapshot-tests/tests/snapshots/parser__bad_keys__newline3.snap
---
source: crates/snapshot-tests/tests/parser.rs
expression: combined
---
error[UnterminatedString]: unterminated basic string, expected `"`
  ┌─ newline3:1:11
  │
1 │ "something
  │           ^ expected `"`


error: unterminated basic string, expected `"`
 --> newline3:1:11
  |
1 | "something
  |           ^ expected `"`
Error {
    kind: "UnterminatedString",
    message: "unterminated basic string, expected `\"`",
    span: 10..10,
    path: None,
}
